<resources>
    <string name="app_name">Wander Wisely</string>
    <string name="category">Category</string>
    <string name="recommendation">Recommendation</string>
    <string name="wanderwisely">WanderWisely</string>
    <string name="your_customized_travel_itinerary_planner_for_indonesia">Your Customized Travel Itinerary Planner for Indonesia</string>
    <string name="first_recommendation">First Recommendation</string>
    <string name="second_recommendation">Second Recommendation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_plan">Add To Plan</string>
    <string name="fasilitas">Facilities</string>
    <string name="gallery">Gallery Photo</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="estimation">Cost Estimation</string>
    <string name="favorite">Favorite</string>
    <string name="tourist_photo">Tourist Photo</string>
    <string name="tourist_name">Tourist Name</string>
    <string name="location_tourist">Location Tourist</string>
    <string name="tourist_location">Tourist Location</string>
    <string name="price">Price</string>
    <string name="rating_tourist">Rating Tourist</string>
    <string name="all">All</string>
    <string name="beach">Beach</string>
    <string name="national_parks">National Parks</string>
    <string name="nature">Nature</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="list_alt">Plan</string>
    <string name="tell_us_more_about_you">Tell us more about you</string>
    <string name="what_type_of_tourist_attractions_that_you_like">What type of tourist attractions that you like?</string>
    <string name="Continue">Continue</string>
    <string name="tv_onboarding">Make Your Plan Travel</string>
    <string name="get_started">Get Started</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="tab_text_1">Detail</string>
    <string name="tab_text_2">Description</string>
    <string name="galeri_2">Galeri 2</string>
    <string name="galeri_1">Galeri 1</string>
    <string name="galeri_3">Galeri 3</string>
    <string name="banner_detail">Banner Detail</string>
    <string name="question1">Interests and Hobbies ?</string>
    <string name="hiking">Hiking</string>
    <string name="snorkeling">Snorkeling</string>
    <string name="photography">Photography</string>
    <string name="trekking">Trekking</string>
    <string name="outbound">Outbound</string>
    <string name="culinary">Culinary</string>
    <string name="question2">Vacation Budget ?</string>
    <string name="type2">Rp 50.000 - Rp 100.000</string>
    <string name="type1"><![CDATA[< Rp 50.000]]></string>
    <string name="type4"><![CDATA[> Rp 250.000]]></string>
    <string name="type3">Rp 100.000 - Rp 250.000</string>
    <string name="popular">Popular</string>
    <string name="quiet">Quiet</string>
    <string name="lodge">Lodge</string>
    <string name="camp">Camp</string>
    <string name="family">Family</string>
    <string name="alone">Alone</string>
    <string name="splash">Splash</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="question3">What Kind of Vacation Do You Want?</string>
    <string name="restart">Try Again</string>
    <string name="fail">Fail Get Data Check Your Internet</string>
    <string name="search_hint">Search</string>
    <string name="cant_find_place">Cannot Find Place</string>
    <string name="list_of_facilities">List Of Facilities</string>
    <string name="cuaca">Weather</string>
    <string name="feels_like">Feels Like %s</string>
    <string name="suhu">Temp</string>
    <string name="weather_type">Weather Type</string>
    <string name="successfully_added_plan">Successfully Added Plan</string>
    <string name="plan_have_been_added">Plan Have Been Added</string>
    <string name="successfully_added_favorite">Successfully Added To Favorite</string>
    <string name="successfully_remove_favorite">Successfully Delete To Favorite</string>
    <string name="see_plan">See Plan</string>
    <string name="back_to_home">Back To Home</string>
</resources>