<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewDialog"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:padding="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/banner_detail"
        android:src="@drawable/detail_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/successfully_added_plan"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDialog"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/imageViewDialog"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDialog" />

    <Button
        android:id="@+id/seePlan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/button_outline"
        android:text="@string/see_plan"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/toHome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/back_to_home"
        style="@style/button"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/seePlan"
        app:layout_constraintStart_toStartOf="@+id/seePlan"
        app:layout_constraintTop_toBottomOf="@+id/seePlan" />

</androidx.constraintlayout.widget.ConstraintLayout>