<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp"
    app:cardBackgroundColor="@color/white"
    android:background="@color/white"
    android:id="@+id/card_view"
    android:layout_height="250dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_weather">

        <ImageView
            android:id="@+id/icn_weather"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/cuaca"
            android:src="@drawable/cloudy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weather_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_type"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/icn_weather"
            app:layout_constraintStart_toStartOf="@+id/icn_weather"
            app:layout_constraintTop_toBottomOf="@+id/icn_weather" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tourist_location"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_weather_type"
            app:layout_constraintStart_toStartOf="@+id/tv_weather_type"
            app:layout_constraintTop_toBottomOf="@+id/tv_weather_type" />

        <TextView
            android:id="@+id/tv_suhu"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/suhu"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/tv_suhu"
            app:layout_constraintTop_toBottomOf="@+id/tv_suhu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>