<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.frament.DetailFragment">

    <TextView
        android:id="@+id/fasilitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fasilitas"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_fasilitas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fasilitas"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toTopOf="@+id/galerry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="detail dari fasilitas" />

    <TextView
        android:id="@+id/galerry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_margin="15dp"
            android:src="@drawable/foto1_galeri" />

        <ImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_margin="15dp"
            android:src="@drawable/foto2_galeri" />

        <ImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_margin="15dp"
            android:src="@drawable/foto2_galeri" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/lokasi"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/cuaca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>